# CNC_Turret_Tool_Placement

./: .gitignore  devenv.nix  pyproject.toml
Files/: cncParts.py  geneticAlgorithm.py  main.py
src/: schemas.py
src/data/: turrets.json
